JWT and swagger updated
